-zmiana lang na pl

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -37,30 +37,31 @@
         <button type="button">Zamów usługe</button>
       </section>
       <section>
+        <h2>Przykladowy tekst</h2>
         <ul>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -101,75 +102,61 @@
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-            <figure>
-              <img
-                src="./images/worker1.jpg"
-                alt="To jest pracownik 1"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p><strong>John Doe</strong></p>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/worker1.jpg"
+              alt="Zdjecie przedstawiajace Johna Doe"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>Product Designer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/worker2.jpg"
-                alt="To jest pracownik 2"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p><strong>John Doe</strong></p>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/worker2.jpg"
+              alt="Zdjecie przedstawiajace Johna Doe"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/worker3.jpg"
-                alt="To jest pracownik 3"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p><strong>John Doe</strong></p>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/worker3.jpg"
+              alt="Zdjecie przedstawiajace Johna Doe"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>Marketing</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/worker4.jpg"
-                alt="To jest pracownik 4"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p><strong>John Doe</strong></p>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/worker4.jpg"
+              alt="Zdjecie przedstawiajace Johna Doe"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <a href="#" target="_blank" title="Strona główna">Webstudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+48111111111">+48111111111</a>
-        </li>
-      </ul>
+      <address>
+        m. Warszawa, Aleje Jerozolimskie 21
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+48111111111">+48111111111</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
